--- a/B2Dh_D2KKpipi_B2OC_Presentation_4th_November.tex
+++ b/B2Dh_D2KKpipi_B2OC_Presentation_4th_November.tex
@@ -709,12 +709,19 @@
   \end{itemize}
 \end{frame}
 
+\section{Quasi-GLW observables with $B^\pm\to Dh^\pm$, $D\to\pi^+\pi^-\pi^+\pi^-$}
+\begin{frame}{Quasi-GLW observables with $B^\pm\to Dh^\pm$, $D\to\pi^+\pi^-\pi^+\pi^-$}
+  \begin{center}
+    {\huge Bonus measurement: \\ \vspace{0.5cm} Quasi-GLW observables with \\ $B^\pm\to Dh^\pm$, $D\to\pi^+\pi^-\pi^+\pi^-$}
+  \end{center}
+\end{frame}
+
 \begin{frame}{Bonus measurement}
   \begin{itemize}
     \setlength\itemsep{1em}
     \item{The mode $B^\pm\to Dh^\pm$, $D\to\pi^+\pi^-\pi^+\pi^-$ very similar}
     \item{Run this through \underline{same} selection (including BDT)}
-    \item{Can measure quasi-GLW observables as additional constraints on $\gamma$:}
+    \item{Can measure quasi-GLW observables of $\pi^+\pi^-\pi^+\pi^-$ and $K^+K^-\pi^+\pi^-$ as additional constraints on $\gamma$:}
   \end{itemize}
   \begin{align*}
     A_h =& \frac{\Gamma(B^-\to Dh^-) - \Gamma(B^+\to Dh^+)}{\Gamma(B^-\to Dh^-) + \Gamma(B^+\to Dh^+)}, \\
