Fixed typo and moved a bullet point

--- a/B2Dh_D2KKpipi_B2OC_Presentation_4th_November.tex
+++ b/B2Dh_D2KKpipi_B2OC_Presentation_4th_November.tex
@@ -542,7 +542,7 @@
     \mathcal{R}_i = 
     \begin{cases}
       F_i, \quad i = -8 \\
-      F_i/\sum_{j\geq i}, -8 < i\leq+8
+      F_i/\sum_{j\geq i}F_j, -8 < i\leq+8
     \end{cases}
   \end{equation*}
 \end{frame}
@@ -784,8 +784,8 @@
   \begin{itemize}
     \setlength\itemsep{2em}
     \item{Binned $\gamma$ analysis of $B^\pm\to(K^+K^-\pi^+\pi^-)_Dh^\pm$ is mostly complete, with promising results}
-    \item{ANA note is ready}
     \item{Add quasi-GLW observables of $K^+K^-\pi^+\pi^-$ and $\pi^+\pi^-\pi^+\pi^-$ to further constrain $\gamma$}
+    \item{ANA note is ready!}
     \item{Will publish model-dependent measurement for now, update with model-independent results when $c_i$ and $s_i$ from BESIII are available}
   \end{itemize}
 \end{frame}
